syntax = "proto3";

package service;

service ProductService {
	rpc GetById(GetByIdRequest) returns (GetByIdResponse);
	rpc Save(Product) returns (SaveResponse);
}

message Product {
	int32 id = 1;
	string name = 2;
	string category = 3;
	string description = 4;
	int32 price = 5;
	string photo = 6;
}

message GetByIdRequest {
	int32 id = 1;
}

message GetByIdResponse {
	Product product = 1;
}

message SaveResponse {
	bool isSuccess = 1;
	string messsage = 2;
}